Pushing after demo

--- a/property.properties
+++ b/property.properties
@@ -15,5 +15,7 @@ dburl=jdbc:mysql://ordersource.mysql.database.azure.com/pricesource_prod?useSSL=
 dbusername =pricsource-prod@ordersource
 dbpassword=t8urHMp+Wk
 
+
 #user details
 username=adarsh.jayanna@costrategix.com
+password=12345
