--- a/property.properties
+++ b/property.properties
@@ -19,3 +19,13 @@ dbpassword=t8urHMp+Wk
 #user details
 username=adarsh.jayanna@costrategix.com
 password=12345
+
+
+#App specific
+open_variance_status=1
+Price_change_open_status=2
+comments="Price change updates - API Automation"
+
+
+#timeout
+timeout=3000
